<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConsumerReferencedetails">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/myToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:subtitle="Consumer Reference details"
            app:titleMargin="4dp" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="69dp">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/sign"
                android:text="@string/Consumerno" />

            <EditText
                android:id="@+id/Consumer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="@dimen/Editttextreg"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLength="13"
                android:shadowColor="#03A9F4" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/sign"
                android:text="@string/namereg" />

            <EditText
                android:id="@+id/Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="@dimen/editextnamereg"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:shadowColor="#03A9F4" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Subdivision"
                android:textColor="@color/sign"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/subdivision"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:textColor="@color/sign"
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Category"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Meter No"
                android:textColor="@color/sign"
                android:textSize="16sp" />

           <EditText
               android:id="@+id/meter"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:inputType="text"/>

            <TextView
                android:textColor="@color/sign"
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Pincode" />

            <EditText
                android:id="@+id/Pincode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="@dimen/Editttextreg"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLength="13"
                android:shadowColor="#03A9F4" />

            <TextView
                android:textColor="@color/sign"
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mobileno" />

            <EditText
                android:id="@+id/Mobileno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="@dimen/Editttextreg"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLength="13"
                android:shadowColor="#03A9F4" />

            <TextView
                android:textColor="@color/sign"
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Email" />

            <EditText
                android:id="@+id/Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="@dimen/Editttextreg"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLength="13"
                android:shadowColor="#03A9F4" />

            <TextView
                android:textColor="@color/sign"
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addressforcorresondence" />

            <EditText
                android:id="@+id/Address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:elevation="@dimen/Editttextreg"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                android:scrollHorizontally="false"
                android:shadowColor="#03A9F4"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="100dp"
                    android:text="Save">

                </Button>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>